# GD-Clone

./: App.h  CMakeLists.txt  DrawGroup.cpp  DrawGroup.h  Level.cpp  Level.h  LevelState.h  Player.cpp  State.h  main.cpp
src/: App.cpp  Camera.cpp  Camera.h  Level.cpp  Level.h  LevelElement.cpp  LevelElement.h  LevelState.cpp  LevelState.h  Player.cpp  Player.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  globals.h  levels.h
